# rhask

./: Cargo.toml  README.md  rhaskfile.rhai  rhaskfile_demo.rhai  rhaskfile_sample.rhai
scripts/: coverage.sh
src/: cli.rs  engine.rs  lib.rs  logger.rs  main.rs  printer.rs  task.rs
src/completions/: bash.rs  fish.rs  mod.rs  zsh.rs
src/engine/: api.rs  bindings.rs  core.rs  mod.rs  runtime.rs
src/task/: arguments.rs  display.rs  mod.rs  model.rs  resolver.rs
src/task/builder/: group_builder.rs  mod.rs  task_builder.rs
src/task/model/: builder.rs  group.rs  mod.rs  registry.rs  task.rs  tests.rs  types.rs  util.rs
src/task/registry/: mod.rs  resolver.rs  task_registry.rs
src/task/stack/: build_stack.rs  mod.rs
tests/: rhaskfile.rhai  rhaskfile_invalid_dir.rhai  rhaskfile_invalid_exec.rhai  rhaskfile_invalid_trigger.rhai  run_api.rs  tasks_cli.rs
