[package]
name = "rhask"
version = "0.1.0"
edition = "2024"
description = "Task runner powered by Rhai."
readme = "README.md"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rhask"
path = "src/main.rs"

[dependencies]
rhai = "1.23"
clap = { version = "4", features = ["derive"] }
indexmap = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
