[package]
name = "rhask"
version = "0.2.2"
edition = "2021"
description = "Rhai-based Task Runner."
repository = "https://github.com/nakkiy/rhask"
homepage = "https://github.com/nakkiy/rhask"
documentation = "https://github.com/nakkiy/rhask"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["task-runner", "automation", "cli", "rhai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rhask"
path = "src/main.rs"

[dependencies]
rhai = "1.23"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
indexmap = "2"
log = "0.4"
env_logger = "0.11"
rhai-process = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
